--- a/src/AlgorithmDemo_V1.1/NSXT.css
+++ b/src/AlgorithmDemo_V1.1/NSXT.css
@@ -56,7 +56,7 @@
 
 
 /*floating card*/
-#card {
+.card {
     top: 0px;
     left: 0px;
     width: 100%;
@@ -66,11 +66,12 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 100;
     display: block;
+
 }
 
 /*card title*/
 
-#card .title {
+.card .title {
     height: 30px;
     line-height: 30px;
     padding: 0px 6px;
@@ -84,7 +85,7 @@
 
 /*card content*/
 
-#card .content {
+.card .content {
     padding: 6px;
     font-size: 12px;
     color: #000000;
@@ -92,19 +93,27 @@
 
 /*card buttons*/
 
-#card .buttons {
-    position: absolute;
+.card .buttons {
     bottom: 6px;
     right: 6px;
+
+
 }
 
 /*card buttons button*/
 
-#card .buttons button {
+.card .buttons button {
     margin-left: 6px;
     padding: 2px 6px;
     border: 1px solid #C0C0C0;
     border-radius: 4px;
-    background-color: #F0F0F0;
+    color: #F0F0F0;
+    /*make buttons bigger*/
+    font-size: 14px;
+    font-weight: bold;
+    background-color: #E0E0E0;
+
+    background-color: #3554f1;
     cursor: pointer;
 }
+
